--- a/src/main/java/org/example/apisubmit.html
+++ b/src/main/java/org/example/apisubmit.html
@@ -1,74 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>API Test Generator</title>
-    <script src="https://unpkg.com/htmx.org@1.6.1"></script>
+    <title>API Combination Tester</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <style>
-        form {
-            width: 50%;
-            margin: 0 auto;
-            padding: 20px;
-            border: 1px solid #000;
-            border-radius: 5px;
-        }
-        label {
-            display: block;
-            margin-top: 20px;
-        }
-        input[type="submit"] {
-            margin-top: 20px;
-            border-radius: 5px;
-            padding: 10px 20px;
+        #submitButton {
             background-color: blue;
-            color: #fff;
             border: none;
-            cursor: pointer;
+            border-radius: 15px;
+            color: white;
+            padding: 10px 24px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
         }
-        input[type="submit"]:hover {
-            background-color: #000080;
+        #jsonInput {
+            width: 100%;
+            height: 200px;
         }
-        .response-container {
-            margin-top: 40px;
+        table {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 5px;
         }
     </style>
 </head>
 <body>
-<h1>API Test Generator</h1>
-<form id="api-details-form" hx-post="/api" hx-vals='jsonData()' hx-trigger="submit" hx-swap="outerHTML">
-    <label for="endPoint">Endpoint:</label>
-    <input type="text" id="endPoint" name="endPoint">
-
-    <label for="methodType">Method Type:</label>
-    <select id="methodType" name="methodType">
-        <option value="GET">GET</option>
-        <option value="POST">POST</option>
-    </select>
-
-    <label for="header">Headers (JSON):</label>
-    <textarea id="header" name="header" rows="4" cols="50"></textarea>
-
-    <label for="formData">Form/Data (JSON):</label>
-    <textarea id="formData" name="formData" rows="4" cols="50"></textarea>
-
-    <label for="possibleValue">Possible Values (JSON):</label>
-    <textarea id="possibleValue" name="possibleValue" rows="4" cols="50"></textarea>
-
-    <input type="submit" value="Submit">
+<form id="apiForm">
+    <label for="jsonInput">Enter API details:</label><br>
+    <textarea id="jsonInput"></textarea><br>
+    <input id="submitButton" type="submit" value="Submit">
 </form>
-
-<div class="response-container" id="responseContainer" hx-swap="innerHTML">
-    <!-- Server response will be swapped in here -->
-</div>
+<div id="tableDiv"></div>
 
 <script>
-        function jsonData() {
-            return {
-                endPoint: document.getElementById('endPoint').value,
-                methodType: document.getElementById('methodType').value,
-                header: document.getElementById('header').value,
-                formData: document.getElementById('formData').value,
-                possibleValue: document.getElementById('possibleValue').value
-            }
+        document.getElementById('apiForm').onsubmit = async function(e) {
+            e.preventDefault();
+
+            const jsonInput = document.getElementById('jsonInput').value;
+            const response = await axios.post('http://localhost:7001/generate-combinations', jsonInput);
+            document.getElementById('tableDiv').innerHTML = response.data;
         }
     </script>
 </body>
